fix: change from fresh to Agapemate

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -789,11 +789,6 @@ video {
   margin: 0.25rem;
 }
 
-.mx-4{
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -830,10 +825,6 @@ video {
 
 .ml-4{
   margin-left: 1rem;
-}
-
-.mr-4{
-  margin-right: 1rem;
 }
 
 .mt-2{
@@ -967,28 +958,24 @@ video {
   height: 5rem;
 }
 
-.h-\[200px\]{
-  height: 200px;
+.h-32{
+  height: 8rem;
 }
 
-.h-24{
-  height: 6rem;
+.h-\[200px\]{
+  height: 200px;
 }
 
 .h-full{
   height: 100%;
 }
 
-.h-32{
-  height: 8rem;
-}
-
-.h-36{
-  height: 9rem;
-}
-
 .w-12{
   width: 3rem;
+}
+
+.w-16{
+  width: 4rem;
 }
 
 .w-2\/4{
@@ -1013,10 +1000,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-16{
-  width: 4rem;
 }
 
 .max-w-3xl{
@@ -1552,8 +1535,16 @@ video {
   gap: 3rem;
 }
 
+.gap-2{
+  gap: 0.5rem;
+}
+
 .gap-3{
   gap: 0.75rem;
+}
+
+.gap-4{
+  gap: 1rem;
 }
 
 .gap-6{
@@ -1562,14 +1553,6 @@ video {
 
 .gap-8{
   gap: 2rem;
-}
-
-.gap-4{
-  gap: 1rem;
-}
-
-.gap-2{
-  gap: 0.5rem;
 }
 
 .gap-y-12{
@@ -2083,11 +2066,6 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.border-orange-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(249 115 22 / var(--tw-border-opacity));
-}
-
 .border-primary{
   --tw-border-opacity: 1;
   border-color: rgb(240 129 0 / var(--tw-border-opacity));
@@ -2232,6 +2210,10 @@ video {
   padding: 0.25rem;
 }
 
+.p-1\.5{
+  padding: 0.375rem;
+}
+
 .p-2{
   padding: 0.5rem;
 }
@@ -2246,10 +2228,6 @@ video {
 
 .p-8{
   padding: 2rem;
-}
-
-.p-1\.5{
-  padding: 0.375rem;
 }
 
 .px-2{
@@ -2290,11 +2268,6 @@ video {
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
 }
 
 .pt-16{
@@ -2508,11 +2481,6 @@ video {
 .text-gray-900{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.text-orange-500{
-  --tw-text-opacity: 1;
-  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
 .text-orange-600{
@@ -2937,7 +2905,6 @@ h1,h2,h3,h4,h5,h6{
 
 .faq-answer.open {
   max-height: 500px;
-  /* Adjust as needed */
   padding: 0.5rem 0.8rem;
 }
 
@@ -3005,10 +2972,6 @@ h1,h2,h3,h4,h5,h6{
 }
 
 @media (min-width: 640px){
-  .sm\:rounded-lg{
-    border-radius: 0.5rem;
-  }
-
   .sm\:underline{
     text-decoration-line: underline;
   }
@@ -3051,30 +3014,26 @@ h1,h2,h3,h4,h5,h6{
     width: 33%;
   }
 
+  .md\:w-auto{
+    width: auto;
+  }
+
   .md\:w-fit{
     width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content;
   }
 
-  .md\:w-auto{
-    width: auto;
-  }
-
   .md\:rounded-2xl{
     border-radius: 1rem;
   }
 
-  .md\:rounded-lg{
-    border-radius: 0.5rem;
+  .md\:p-12{
+    padding: 3rem;
   }
 
   .md\:p-8{
     padding: 2rem;
-  }
-
-  .md\:p-12{
-    padding: 3rem;
   }
 
   .md\:py-12{
@@ -3096,14 +3055,14 @@ h1,h2,h3,h4,h5,h6{
     line-height: 2.25rem;
   }
 
-  .md\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
   .md\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .md\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
